Added two versions of SMS communication to the app (preferred version is currently operating (uncommented) and implemented). Still needs to be fine tuned however. Also collapsed the unlock/lock buttons to a single button and added long click context menu to select the mode of communication for app to smartbox communication. Need to clean up the code since its getting messy though.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
